💄 Fix polls
Polls didn't look great, so I reintroduced the giffgaff pink accent colour, fading it to keep it dark-ish. Percentage text has been brightened to increase contrast, meeting accessibility requirements. Checkbox background colours have been darkified.

--- a/resources/less/forum/extension.less
+++ b/resources/less/forum/extension.less
@@ -9,6 +9,7 @@
 /* General Colors */
 
 @gg-yellow: #fcc31e;
+@gg-pink: #eb5f8e;
 
 .ggDarkModeBanner {
     position: fixed;
@@ -1292,10 +1293,18 @@ body.dark.dark--oled {
 
             &[data-selected="true"] {
                 border-color: @contrast-grey !important;
+
+                .PollAnswer {
+                    color: @main-text;
+                }
+            }
+
+            .PollPercent {
+                color: @main-text-3 !important;
             }
 
             & .PollOption-active {
-                background: @lightest-grey !important;
+                background: fade(@gg-pink, 60%) !important;
             }
 
             // override poll checkbox colours
